stylesheet.css
body {
    font-family: 'Franklin Gothic Medium', sans-serif;
    display: flex;
    flex-direction: column;
    padding-bottom:30px;
}

.header{
    color: tomato;
    text-align: center;
}

.welcome{
    text-align: center;
    padding: 20px;
    margin-bottom: 20px;
    border-radius: 10px;
}

#userName {
    padding: 8px;
    border: 2px solid tomato;
    border-radius: 5px;
}

.stepContent {
    font-size: 20px;
    align-items: center;
    justify-content: center;
    display:flex;
    flex-direction: column;
    max-height: 0;
    overflow: hidden;
    transition: max-height 0.3s ease-out, padding 0.3s ease;
    padding: 0 20px; 
    background-color: white;
}

/* .photoCollection{
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    gap: 20px;
    margin-top: 20px;
} */

.stepImage {
    width: 200px; 
    margin: 10px;
    border-radius: 8px;
    height: auto; 
}

.icon{
    font-size: 24px;
    transition: transform 0.3s ease;
}
.stepHeader {
    background-color: #f1f1f1;
    color: rgb(136, 103, 91);
    padding: 10px 20px;
    cursor: pointer;
    display: flex;
    justify-content: space-between;
    align-items: center;
    border-bottom: 1px solid #ccc;

    &:hover {
        background-color: #adabab;
    }
}

.stepDropdown.active .stepContent {
    max-height: 1000px; 
    padding: 20px; 
    border-bottom: 1px solid white;
}

.stepDropdown.active .icon {
    transform: rotate(45deg);
}

.stepImage.large {
    width: 600px; 
}


#zoomBtn {
    padding: 10px 20px;
    background-color: #28a745;
    color: white;
    border: none;
    border-radius: 5px;
    cursor: pointer;
    margin-top: 10px;
}

#zoomBtn:hover {
    background-color: #218838;
}

